--- a/src/components/Inicio/Inicio.module.css
+++ b/src/components/Inicio/Inicio.module.css
@@ -138,7 +138,7 @@ main{
 }
 
 .sobre p{
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   max-width: 500px;
 }
 
@@ -222,9 +222,9 @@ main{
 }
 
 .cards p{
-  font-size: 1.2rem;
-  opacity: .8;
-  font-weight: 600;
+  font-size: 1.1rem;
+  opacity: .9;
+  font-weight: 500;
 }
 
 
@@ -240,12 +240,79 @@ main{
 }
 
 
+
 .tecno{
   background-color: white;
-  width: 100%;
-  min-height: 70vh;
+  min-height: 100vh;
   height: auto;
   padding: 5%;
+  display: grid;
+  gap: 15px;
+  grid-template-columns: repeat(auto-fill,minmax(25rem,1fr));
+  align-items: center;
+
+  
+}
+
+.tecno2{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
 
 
+.tecnoImg{
+  background-color: rgb(218, 222, 226);
+  width: 180px;
+  height: 100px;
+  border: 2px solid rgb(179, 169, 169);
+  border-radius: 7px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all .2s ease-in-out;
+}
+
+.tecnoImg:hover{
+  transform: translateY(-2px);
+}
+
+.tecnoImg img{
+  filter: invert(11%) sepia(91%) saturate(6501%) hue-rotate(301deg) brightness(106%) contrast(100%);
+}
+
+.sobreTecno{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.sobreTecno h3{
+  font-size: 1.1rem;
+  color:#08930f;
+}
+
+.sobreTecno h2{
+  font-size: 2.5rem;
+  background-image: linear-gradient(to right, #d30cda, #7b0ce2);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.sobreTecno p{
+  width: 80%;
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+.sobreTecno div{
+  width: 110px;
+  height: 40px;
+  border: 2px solid black;
+  border-radius: 7px;
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
