--- a/src/components/Inicio/Inicio.module.css
+++ b/src/components/Inicio/Inicio.module.css
@@ -367,10 +367,11 @@ main{
 .redes{
   width: 100%;
   height: 100px;
+  margin-top: 30px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
   gap: 15px;
 
 }
