--- a/src/components/Formulario/Formulario.module.css
+++ b/src/components/Formulario/Formulario.module.css
@@ -1,12 +1,39 @@
+.padre{
+  background-color: rgb(238, 233, 233);
+  width: 100%;
+  height: 90vh;
+  margin:0 auto;
+  display:grid;
+  grid-template-columns: 75% 25%;
+  justify-content: center;
+  align-items: center;
+}
+
+.fondo img{
+  width: 100%;
+  height:89vh;
+  background-position: center center;
+  background-size:cover;
+}
+
+
+
 .formContainer {
-    width: 320px;
+
+    width: 100%;
+    height: 100%;
     border-radius: 0.75rem;
-    background-color: rgba(17, 24, 39, 1);
     padding: 2rem;
     color: rgba(243, 244, 246, 1);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
   }
   
   .title {
+    color: black;
     text-align: center;
     font-size: 1.5rem;
     line-height: 2rem;
@@ -25,35 +52,39 @@
   
   .inputGroup label {
     display: block;
-    color: rgba(156, 163, 175, 1);
+    color:black;
+    font-weight: 700;
     margin-bottom: 4px;
   }
   
   .inputGroup input {
-    width: 100%;
+    width: 70%;
+    min-width: 350px;
     border-radius: 0.375rem;
-    border: 1px solid rgba(55, 65, 81, 1);
+    border: 1px solid rgb(96, 97, 100);
     outline: 0;
-    background-color: rgba(17, 24, 39, 1);
     padding: 0.75rem 1rem;
+    background-color: #f5ebeb;
     color: rgba(243, 244, 246, 1);
+    margin: 0 auto;
   }
   
   .inputGroup input:focus {
-    border-color: rgba(167, 139, 250);
+    border-color: rgb(38, 10, 123);
   }
   
   .forgot {
+    width: 70%;
+    font-weight: 600;
     display: flex;
     justify-content: flex-end;
     font-size: 0.75rem;
     line-height: 1rem;
-    color: rgba(156, 163, 175,1);
     margin: 8px 0 14px 0;
   }
   
   .forgot a,.signup a {
-    color: rgba(243, 244, 246, 1);
+    color: rgb(140, 3, 83);
     text-decoration: none;
     font-size: 14px;
   }
@@ -64,17 +95,19 @@
   
   .sign {
     display: block;
-    width: 100%;
-    background-color: rgba(167, 139, 250, 1);
+    min-width: 350px;
+    width: 60%;
+    background:linear-gradient(130deg,  #240134, #50024d , #240134);
     padding: 0.75rem;
     text-align: center;
-    color: rgba(17, 24, 39, 1);
+    color: rgb(255, 255, 255);
     border: none;
     border-radius: 0.375rem;
     font-weight: 600;
   }
   
   .socialMessage {
+    width: 350px;
     display: flex;
     align-items: center;
     padding-top: 1rem;
@@ -83,7 +116,7 @@
   .line {
     height: 1px;
     flex: 1 1 0%;
-    background-color: rgba(55, 65, 81, 1);
+    background-color: rgb(6, 6, 6);
   }
   
   .socialMessage .message {
@@ -91,10 +124,12 @@
     padding-right: 0.75rem;
     font-size: 0.875rem;
     line-height: 1.25rem;
-    color: rgba(156, 163, 175, 1);
+    color: rgb(140, 3, 83);
+    font-weight: 700;
   }
   
   .socialIcons {
+    width: 60%;
     display: flex;
     justify-content: center;
   }
@@ -110,13 +145,15 @@
   .socialIcons .icon svg {
     height: 1.25rem;
     width: 1.25rem;
-    fill: #fff;
+    fill: rgb(140, 3, 83);
   }
   
   .signup {
+    width: 60%;
     text-align: center;
     font-size: 0.75rem;
     line-height: 1rem;
-    color: rgba(156, 163, 175, 1);
+    color: rgb(140, 3, 83);
+    font-weight: 600;
   }
   
