--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -42,7 +42,7 @@ header.scrolled {
 .logo h2{
   color: white;
   font-family: 'Times New Roman', Times, serif;
-
+  font-size: 1.6rem;
   font-weight: 900;
 }
 
