--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,16 @@
 body{
   background:linear-gradient(130deg,  #240134, #50024d , #011c2e);
 }
+
+body::-webkit-scrollbar{
+  width: 0;
+}
+
+body::-webkit-scrollbar-thumb{
+  background-color: rgb(2, 0, 13);
+  border-radius: 10px;
+}
+
+body::-webkit-scrollbar-thumb:hover{
+  background-color: rgb(2, 0, 13);
+}
