--- a/src/components/Articulos/Articulos.module.css
+++ b/src/components/Articulos/Articulos.module.css
@@ -1,3 +1,11 @@
+a{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .articulos{
     width: 100%;
     min-height: 90vh;
@@ -113,9 +121,14 @@
 }
 
 .fronItem .info a{
+  width: 100%;
+  height: 100%;
   text-decoration: none;
   color: black;
   font-weight: 600;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 
