--- a/src/components/Articulos/Articulos.module.css
+++ b/src/components/Articulos/Articulos.module.css
@@ -1,10 +1,4 @@
-a{
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+
 
 .articulos{
     width: 100%;
@@ -13,6 +7,14 @@ a{
     background-color: rgb(238, 233, 233);
     display: flex;
     flex-direction: column;
+}
+
+.articulos a{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 
