--- a/src/components/Info/Info.module.css
+++ b/src/components/Info/Info.module.css
@@ -16,19 +16,13 @@
 
 .card{
     background: rgb(230, 225, 229);
-    width: 90%;
-    height: auto;
-    margin: 0 auto;
-    border: 1px solid #ccc;
-    border-radius: 15px;
-    display: grid;
-    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
     gap: 20px;
-    grid-template-columns: repeat(auto-fill, minmax(23rem, 1fr));
 }
 
 .texto{
-  width:100%;
+  width:600px;
   height: 100%;
   display: flex;
   flex-direction: column;
