--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,3 +1,7 @@
+.navMobile{
+  display: none;
+}
+
 header{
   z-index: 9;
   position: sticky;
@@ -49,5 +53,37 @@ header.scrolled {
   font-family: 'Times New Roman', Times, serif;
   font-size: 1.6rem;
   font-weight: 900;
+}
+
+
+@media (max-width: 730px){
+  header{
+    display: flex;
+  }
+
+  .logo h2{
+    display: none;
+  }
+}
+
+@media (max-width: 600px){
+  header{
+    justify-content: flex-end;
+    
+  }
+
+  .nav{
+    display: none;
+  }
+
+  .navMobile{
+    /* width: 100%; */
+    display: flex;
+    gap: 35px;
+    margin-right: 35px;
+    
+    justify-content: center;
+    align-items: center;
+  }
 }
 
