--- a/src/components/Formulario/Formulario.module.css
+++ b/src/components/Formulario/Formulario.module.css
@@ -4,7 +4,7 @@
   height: 90vh;
   margin:0 auto;
   display:grid;
-  grid-template-columns: 75% 25%;
+  grid-template-columns: 75% 25%; 
   justify-content: center;
   align-items: center;
 }
@@ -59,7 +59,7 @@
   
   .inputGroup input {
     width: 70%;
-    min-width: 350px;
+    min-width: 300px;
     border-radius: 0.375rem;
     border: 1px solid rgb(96, 97, 100);
     outline: 0;
@@ -95,7 +95,7 @@
   
   .sign {
     display: block;
-    min-width: 350px;
+    min-width: 300px;
     width: 60%;
     background:linear-gradient(130deg,  #240134, #50024d , #240134);
     padding: 0.75rem;
@@ -107,7 +107,7 @@
   }
   
   .socialMessage {
-    width: 350px;
+    width: 300px;
     display: flex;
     align-items: center;
     padding-top: 1rem;
@@ -156,4 +156,31 @@
     color: rgb(140, 3, 83);
     font-weight: 600;
   }
+
+
+  @media (max-width: 1000px){
+
+    .padre{
+      width: 100%;
+      height: 90vh;
+      display: initial;
+    }
+    
+    .formContainer{
+      border: 0;
+      background-color: rgb(238, 233, 233);
+      width: 100%;
+      height: 90vh;
+    }
+
+    .fondo{
+      display: none;
+    }
+  }
   
+
+  @media (max-width: 400px){
+    .inputGroup input{
+      width: auto;
+    }
+  }
