--- a/src/components/Inicio/Inicio.module.css
+++ b/src/components/Inicio/Inicio.module.css
@@ -399,7 +399,13 @@ main{
 }
 
 .redesImg img{
+  cursor: pointer;
   filter: invert(100%) sepia(0%) saturate(2%) hue-rotate(288deg) brightness(105%) contrast(101%);
+  transition: all .2s ease-in-out;
+}
+
+.redesImg img:hover{
+  transform: translateY(-3px);
 }
 
 
